force-app/main/default/objects/NAICS__c/NAICS__c.object-meta.xml
<CustomObject>
    <description>Holds all NAICS codes used.</description>
    <label>NAICS</label>
    <nameField>
        <label>NAICS Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NAICS&apos;s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>