force-app/main/default/objects/NAICS__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <description>6 digit code of the NAICS</description>
    <externalId>true</externalId>
    <label>Code</label>
    <length>6</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>