force-app/main/default/objects/NAICS__c/fields/Sector__c.field-meta.xml
<CustomField>
    <fullName>Sector__c</fullName>
    <description>NAICS Code corresponding sector</description>
    <label>Sector</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>