force-app/main/default/objects/NAICS__c/fields/Subsector__c.field-meta.xml
<CustomField>
    <fullName>Subsector__c</fullName>
    <description>NAICS code Industry subsector</description>
    <label>Subsector</label>
    <length>100</length>
    <type>Text</type>
</CustomField>