force-app/main/default/objects/NAICS__c/listViews/ALL.listView-meta.xml
<ListView>
    <fullName>ALL</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>ALL</label>
</ListView>